--- a/Parte2/css/main.css
+++ b/Parte2/css/main.css
@@ -1,1 +1,25 @@
 /* Pon tu código css aqui */
+.caja1{
+	width: 100px;
+	height: 100px;
+	background-color: #E9F010;
+	float: left;
+}
+.caja2{
+	width: 100px;
+	height: 100px;
+	background-color:#10DCF0;
+	float: left;
+}
+.caja3{
+	width: 100px;
+	height: 100px;
+	background-color: #EB6AF8;
+	float: left;	
+
+}
+.contenedor{
+	width:600px;
+	border: 1px solid black;
+	
+}
