--- a/Parte4/css/main.css
+++ b/Parte4/css/main.css
@@ -1,1 +1,31 @@
 /* Pon tu código css aqui */
+.caja1{
+	width: 100px;
+	height: 100px;
+	background-color: #E9F010;
+	float: right;
+}
+.caja2{
+	width: 100px;
+	height: 100px;
+	background-color:#10DCF0;
+	float: right;
+}
+.caja3{
+	width: 100px;
+	height: 100px;
+	background-color: #EB6AF8;
+	float: right;	
+
+}
+.contenedor{
+	width:600px;
+	border: 1px solid black;
+	
+}
+.contenedor:after{
+	content:"" ;
+	display: block;
+	clear:both;
+
+}
